Final push to refactor

--- a/md/2019-06-soln.md
+++ b/md/2019-06-soln.md
@@ -1,27 +1,14 @@
 ---
 title: "M248 June 2019"
-date: '2021-04-27'
+date: 2021-04-22
 ---
-
-## Updates
-
-**2021-04-27:**
-
-## Setup
-
-Path to script: **ljk233/AutomatingM248/src/r/calculators.r**
-
-```{r setup}
-source("../src/r/calculators.r")
-source("../src/r/confint.r")
-```
 
 ## Section A
 
 ### q.01
 
 **E.**
-*Checking the validity of a probability mass function (HB p.7)*
+*Checking the validity of a probability function (HB p.7) : **discrete***
 
 A. No, $\sum x \neq 1$
 
@@ -44,17 +31,12 @@ The probability $P(2 \leq X \leq 4)$ is given by
 
 $$
 \begin{aligned}
-    (2 \leq X \leq 4) = \int_{2}^{4} \frac{5}{4x^{2}} \> dx &= \frac{5}{4} \int_{2}^{4} x^{-2} \> dx \\
+    P(2 \leq X \leq 4) = \int_{2}^{4} \frac{5}{4x^{2}} \> dx &= \frac{5}{4} \int_{2}^{4} x^{-2} \> dx \\
     &= \frac{5}{4} \bigg[-x^{-1} \bigg]_{2}^{4} \\
     &= -\frac{5}{4} \bigg(\frac{1}{4} - \frac{1}{2} \bigg) \\
     &= \frac{5}{16} \\
 \end{aligned}
 $$
-
-```{r q.02}
-f <- function(x) {return (5/(4*x**2))}
-integrate(f, 2, 4); 5/16
-```
 
 ### q.03
 
@@ -65,30 +47,22 @@ Normalising constant $K$ is given by
 
 $$
     1 = \int_{-1}^{1} \frac{1}{K} \bigg( 1 + \frac{x}{2} \bigg) \> dx
-      = \frac{1}{K} \int_{-1}^{1} \bigg( 1 + \frac{x}{2} \bigg) \> dx.
+      = \frac{1}{K} \int_{-1}^{1} 1 + \frac{x}{2} \> dx.
 $$
 
-Therefore, $K$ is
+Therefore,
 
 $$
-\begin{aligned}
-    K &= \bigg[ x + \frac{1}{2} \bigg(\frac{x^{2}}{2} \bigg) \bigg]_{-1}^{1} \\
-      &= \bigg( 1 + \frac{1}{4} (1^{2}) - \bigg( -1 + \frac{1}{4} (-1)^{2} \bigg) \bigg) \\
-      &= \bigg( \frac{5}{4} - \bigg( -\frac{3}{4} \bigg) \bigg) \\
-      &= 2 \\
-\end{aligned}
+K = \int_{-1}^{1} 1 + \frac{x}{2} \> dx
+  = \bigg[ x + \frac{1}{2} \bigg(\frac{x^{2}}{2} \bigg) \bigg]_{-1}^{1}
+  = \bigg\{ 1 + \frac{1}{4} (1^{2}) - \bigg( -1 + \frac{1}{4} (-1)^{2} \bigg) \bigg\}
+  = 2
 $$
-
-```{r q.03}
-f <- function (x) {(1/2)*(1+x/2)}  # declare the fn
-integrate(f, -1, 1)  # integrate over range (0,1)
-```
-
 
 ### q.04
 
 **E.**
-*Calculating probabilities using the cumulative distribution functions of a discrete rv (HB p.7)*
+*Calculating probabilities using the c.d.f. : **discrete***
 
 The c.d.f. of $X$ at $x=3$ is given by
 
@@ -105,20 +79,13 @@ The $P(X>2) = 1 - P(X \leq 2)$ is given by,
 
 $$
 \begin{aligned}
-1 - P(X \leq 2) &= 1 - (p(0) + p(1) + p(2)) \\
-  &= 1 - \sum_{i=0}^{2} e^{-\mu} \bigg( \frac{\mu^{x_{i}}}{x{i}!} \bigg) \\
-  &= 1 - e^{-\mu} \sum_{i=0}^{2} \bigg( \frac{\mu^{x_{i}}}{x{i}!} \bigg) \\
+1 - P(X \leq 2) &= 1 - p(0) + p(1) + p(2) \\
+  &= 1 - \sum_{i=0}^{2} e^{-\mu} \bigg( \frac{\mu^{x_{i}}}{x_{i}!} \bigg) \\
+  &= 1 - e^{-\mu} \sum_{i=0}^{2} \bigg( \frac{\mu^{x_{i}}}{x_{i}!} \bigg) \\
   &= 1 - e^{-0.4} \bigg( \frac{0.4^{0}}{0!} + \frac{0.4^{1}}{1!} + \frac{0.4^{2}}{2!} \bigg) \\
-  &= 1 - e^{-0.4} \bigg( 1 + 0.4 +  0.08 \bigg) \\
   &= 1 - 1.48 e^{-0.4}.
 \end{aligned}
 $$
-
-```{r q.05}
-# need to round the values to check equality
-round(ppois(2, 0.4, lower.tail = FALSE), 6) ==
-  round(1-1.48*exp(x = -0.4), 6)
-```
 
 ### q.06
 
@@ -162,15 +129,13 @@ $$
 *Poisson approximation of rare events (HB p.10)*
 
 It is estimated that $p=1/420$ suffer from the disease and $n=2100$ employees work for the company.
-
-Therefore, as $n \geq 50$ and $p \leq 0.05$, we can approximate the number of employees who suffer from the disease at the company as approximately
+Therefore, as $n \geq 50$ and $p \leq 0.05$, the approximate number of employees who suffer from the disease at the company will be distributed
 
 $$
-B \bigg( 2100, \frac{1}{420} \bigg) \approx \text{Poisson} (np),
+B \bigg( 2100, \frac{1}{420} \bigg)
+  \approx \text{Poisson} (np)
+  \sim \text{Poisson} (5)
 $$
-
-where $np = 2100 (1/420) = 5$.
-So a good approximation for the scenario would be $\text{Poisson} (5)$.
 
 ### q.09
 
@@ -188,10 +153,6 @@ $$
 \end{aligned}
 $$
 
-```{r q.09}
-dpois(4, 3)
-```
-
 ### q.10
 
 **B.**
@@ -208,10 +169,6 @@ $$
 \end{aligned}
 $$
 
-```{r q.10}
-pexp(0.25, 3)
-```
-
 ### q.11
 
 **F.**
@@ -222,31 +179,20 @@ So $\text{Poisson}(18)$.
 
 ### q.12
 
-**B and F.**
-*Bernoulli process (HB p.10), Poisson process (HB p.10), and Exponential distribution (HB p.10)*
-
-A. True, in a **Bernoulli** process, the waiting time from one success up to and including the next success has a geometric distribution.
+*Bernoulli process (HB p.10) and Exponential distribution (HB p.10)*
 
 B. **False**, in a **Bernoulli** process, events occur in discrete trials.
-
-C. True, in a **Bernoulli** process, the number of successes in $n$ trials has a binomial distribution.
-
-D. True, in a **Poisson** process, the number of events that occur in a fixed time period has a Poisson distribution.
-
-E. True, in a **Poisson** process, events occur singly.
 
 F. **False**, if $X$ has an *exponential distribution* then $X \sim M(\lambda)$, and so $E(X) = 1/\lambda$.
 
 ### q.13
 
 **C.**
-*Population quantiles of a continuous rv (HB p.11)*
-
-*Note, used $\alpha$ as rational rather than decimal due to the range of possible solutions.*
+*Population quantiles rv (HB p.11) : **continuous***
 
 The $\alpha$-quantile of a continuous rv $X$ with c.d.f. $F(X)$ is defined as $F(x) = \alpha$.
 
-If $F(x) = 2 - \frac{10}{x}, \> x \in (5,10)$, then the *median* is when $\alpha = 1/2$, so
+If $F(x) = 2 - 10/x$ and $\alpha = 1/2$, then
 
 $$
 \begin{aligned}
@@ -258,25 +204,19 @@ $$
 \end{aligned}
 $$
 
-```{r q.13}
-F <- function (x) {2 - 10/x}; F(x = 20/3)
-```
-
 ### q.14
 
 **E.**
 *Population quantiles of a discrete rv (HB p.11)*
 
-*Note, check if the table contains the $f(x)$ or $F(x)$*
-
-The smallest value of $x \in X$ to satisfy $F(X) = q_{U} = \dfrac{3}{4}$ is $x=5$.
+The smallest value of $x \in X$ to satisfy $F(X) = q_{U} = 3/4$ is $x=5$.
 
 ### q.15
 
 **A.**
 *Difference between two independent normal rvs (HB p.11)*
 
-If $X \sim N(4,3)$, $Y \sim N(2,2)$, then $U = X - Y$ has the distribution:
+If $X \sim N(4,3)$, $Y \sim N(2,2)$, then $U = X - Y$ will also be distributed normally with parameters:
 
 $$
 E(U) = E(X-Y) = E(X) - E(Y) = 4 - 2 = 2,
@@ -293,27 +233,23 @@ So $U = X - Y \sim N(2, 5)$.
 ### q.16
 
 **D.**
-*Probabilities for any non-standard normal (HB p.12)*
+*Probabilities for a normal distribution (HB p.12)*
 
 If $X \sim N(22, 36)$, then the probability $P(X > 25)$ is given by
 
 $$
 \begin{aligned}
-  P(X > 25) = 1 - P(X < 25) &= 1 - P\bigg(Z < \frac{25-22}{\sqrt{36}} \bigg) \\
-    &= 1 - P\bigg(Z < \frac{1}{2} \bigg) \\
-    &= 1 - \Phi(0.50) \\
-    &\simeq 1 - 0.6915 = 0.3085.
+P(X > 25) &= 1 - P\bigg(Z < \frac{25-22}{\sqrt{36}} \bigg) \\
+  &= 1 - P\bigg(Z < \frac{1}{2} \bigg) \\
+  &= 1 - \Phi(0.50) \\
+  &\simeq 1 - 0.6915 = 0.3085.
 \end{aligned}
 $$
-
-```{r q.16}
-pnorm(25, 22, 6, lower.tail = FALSE)
-```
 
 ### q.17
 
 **F.**
-*Quantiles of any non-standard normal (HB p.12)*
+*Quantiles of a normal distribution (HB p.12)*
 
 The volume of the container (in ml) that ensures overflow will only occur 1% of the time corresponds to the 0.99-quantile of the distribution of $X \sim N(1748.48, 20^{2})$, such that
 
@@ -329,16 +265,10 @@ $$
 x = 20 (2.326) + 1748.48 = 1795.00.
 $$
 
-```{r}
-qnorm(0.99, 1748.48, 20)
-```
-
-    # Error due to rounding in tables
-
 ### q.18
 
 **A.**
-*Distribution of the mean (HB p.12) and Probabilities for any non-standard normal (HB p.12)*
+*Distribution of the mean (HB p.12) and Probabilities for a normal distribution (HB p.12)*
 
 If $X \sim N(10000, 500^{2})$, then $\overline{X}_{50}$ will be distributed
 
@@ -352,7 +282,7 @@ $$
 V(\overline{X}_{50}) = \frac{\sigma^{2}}{n} = \frac{500^{2}}{50} = 5000.
 $$
 
-Therefore, given $\overline{X}_{50} \sim N(10000, 5000)$, then the probability $P(\overline{X}_{50} < 9900)$ will be given by
+Therefore the probability $P(\overline{X}_{50} < 9900)$ will be given by
 
 $$
 \begin{aligned}
@@ -364,22 +294,12 @@ $$
 \end{aligned}
 $$
 
-```{r q.18}
-pnorm(9900, 10000, sqrt(5000))
-```
-
-    # Error due to rounding in tables
-
 ### q.19
 
 **A.**
-*Unbiased estimators (HB p.13)*
+*Mean of an unbiased estimator (HB p.13)*
 
-If $E(X_{1}) = \theta$, $E(X_{2}) = 2\theta$, and $E(X_{3}) = 6\theta$, then an unbiased estimator for $/theta$ is such that
-
-$$
-E(\widehat \theta) = \theta.
-$$
+If $E(X_{1}) = \theta$, $E(X_{2}) = 2\theta$, and $E(X_{3}) = 6\theta$, then an unbiased estimator for $\theta$ is such that $E(\widehat \theta) = \theta$.
 
 Looking at option A,
 
@@ -390,16 +310,15 @@ $$
     &= \frac{1}{10} \{ E (2 X_{1}) + E (X_{2}) + E (X_{3}) \} \\
     &= \frac{1}{10} \{ 2 E (X_{1}) + E (X_{2}) + E (X_{3}) \} \\
     &= \frac{1}{10} \{ 2 \theta + 2 \theta + 6 \theta \} \\
-    &= \frac{1}{10} \{ 10 \theta \} = \theta.
+    &= \frac{1}{10} \{ 10 \theta \} \\
+    &= \theta.
 \end{aligned}
 $$
-
-Option A is unbiased, so we stop here.
 
 ### q.20
 
 **C.**
-*Exact confidence intervals for normal means (HB p.15)*
+*Exact CI for a normal mean (HB p.15)*
 
 The upper limit of an exact 99% confidence interval for the mean $\mu^{+}$ is given by
 
@@ -409,14 +328,8 @@ $$
 
 where $t$ is the $(1-(\alpha/2))$-quantile of $t(n-1)$.
 
-We know
-
-- $n=10$
-- $\overline{x}=112.5$
-- $s=35.1$
-- $t=3.250$
-  - $0.995$-quantile of the $t(9)$ distribution)
-
+Here we have $\overline{x}=112.5$, $n=10$, and $s=35.1$.
+The value $t=3.250$ is $0.995$-quantile of the $t(9)$ distribution.
 So the upper limit is given by
 
 $$
@@ -425,24 +338,12 @@ $$
 \end{aligned}
 $$
 
-```{r}
-tconfint_mean(a = 0.99, x = 112.5, sd = 35.1, n = 10)
-```
-
 ### q.21
 
 **C and F.**
 *Anatomy of a hypothesis test (HB p.17) and $z$-test (HB p.17)*
 
-A. False, critical value is $2.326$
-
-B. False, this is a one-sided test $(H_{1} : \mu > \mu_{0})$
-
-C. True, as the significance level decreases, the rejection region increases
-
-D. False, $\overline{x} = 434.2$ and $\sigma = 1.1$, so null distribution is approximately $N(434.2, 1.1^{2}) \sim N(434.2, 1.21)$
-
-E. False, rejection region is *as or more extreme*
+C. True, as the significance level decreases, the rejection region increases.
 
 F. True
 
@@ -465,12 +366,11 @@ $$
 The power of this two-sided test with a 5% significance level will be
 
 $$
-1 - \Phi \bigg( q_{1-(\alpha/2)} - \frac{d}{\sigma/\sqrt{n}} \bigg),
+1 - \Phi \bigg( q_{1-(\alpha/2)} - \frac{d}{\sigma/\sqrt{n}} \bigg)
 $$
 
 where $q_{1-(\alpha/2)} = q_{0.975} = 1.960$, $d=0.6$, $\sigma=4.2$, and $n=196$.
-
-Therefore, the power of the test will be
+Therefore,
 
 $$
 \begin{aligned}
@@ -482,19 +382,12 @@ $$
 \end{aligned}
 $$
 
-```{r}
-calc_test_power(a = 0.05, d = 0.6, sd = 4.2, n = 196, one_sided = FALSE)
-```
-
 ### q.24
 
 **C.**
 *Chi-squared goodness-of-fit test (HB p.21)*
 
-The degrees of freedom of a **chi-squared** goodness-of-fit test is $k-p-1$, where
-
-- $k=4$ is the number of categories
-- $p=0$ is the number of estimated parameters
+The degrees of freedom of a **chi-squared** goodness-of-fit test is $k-p-1$, where $k=4$ is the number of categories, and $p=0$ is the number of estimated parameters.
 
 Therefore the degrees of freedom is $4-0-1=3$.
 
@@ -515,35 +408,57 @@ $$
 \chi^{2} = \frac{4.1^{2}}{106.9} + \dots + \frac{(-3.9)^{2}}{11.9} \simeq 1.53.
 $$
 
-```{r}
-obs <- c(111, 37, 34, 8); exp <- c(106.9, 35.8, 35.4, 11.9)
-calc_chi_sq(obs, exp)
-```
+### q.26
+
+**B.**
+*Least squares estimate (HB 22) : **intercept***
+
+The least squares estimate of $\beta$ is
+
+$
+\beta = \frac{S_{xy}}{S_{xx}} = \frac{962.35}{457.44} = 2.10377 \ldots
+$
+
+Therefore, the least squares estimate of the intercept, $\alpha$, is
+
+$$
+\alpha = 31.96 − 2.10377 (12.34) \simeq 6.00.
+$$
 
 ### q.27
 
-==Not answered==
+**A and E.**
+*Hypothesis test of $\widehat{\beta}$ (HB p.22)*
 
 ### q.28
 
-==Not answered==
+**A and F.**
+*Transformations (HB p.23) : **skew data***
+
+The data is left skew, so we go up the ladder of powers.
 
 ### q.29
 
-==Not answered==
+**A.**
+*Using a fitted model (HB p.21)*
+
+The fitted model is $\log{y} = 0.423 + 0.0325 x$, so when $x=30$,
+
+$$
+y = e^{0.423 + 0.0325(30)} = e^{1.398} = 4.047.
+$$
 
 ## Section B
 
 ### q.30
 
-*Cumulative distribution function of a continuous rv (HB p.7)*
+*Finding the c.d.f. of a rv : **continuous***
 
-If $f(x) = \frac{1}{78} (6x^{2} + 2x + 5)$, where $x \in (0,3)$, then the $F(x)$ will be
+If $f(x) = \frac{1}{78} (6x^{2} + 2x + 5)$, where $x \in (0,3)$, then the $F(x)$ will be,
 
 $$
 \begin{aligned}
 F(x) = \int_{0}^{x} \frac{1}{78} (6y^{2} + 2x + 5) \> dy
-  &= \frac{1}{78} \int_{0}^{x} (6y^{2} + 2x + 5) \> dy \\
   &= \frac{1}{78} \bigg[ \frac{6}{3} y^{3} + \frac{2}{2} y^{2} + 5y \bigg]_{0}^{x} \\
   &= \frac{1}{78} \bigg[ 2 y^{3} + y^{2} + 5y \bigg]_{0}^{x} \\
   &= \frac{1}{78} ( 2 x^{3} + x^{2} + 5x - (0 + 0 + 0)) \\
@@ -553,24 +468,18 @@ $$
 
 ### q.31
 
-*Calculating probabilities using the cumulative distribution functions of a discrete rv (HB p.7)*
+*Calculating probabilities using the c.d.f. (HB p.7) : **continuous***
 
-If $F(x) = \frac{1}{80} (x^{2} + x^{3})$, then $P(1 \leq X \leq 2) = P(X \leq 2) - P(X \leq 1)$ will be given by
+If $F(x) = \frac{1}{80} (x^{2} + x^{3})$, then $P(1 \leq X \leq 2) = F(2) - F(1)$ is given by
 
 $$
 \begin{aligned}
-  P(X \leq 2) - P(X \leq 1) &= F(2) - F(1) \\
-    &= \frac{1}{80} (2^{2} + 2^{3}) - \frac{1}{80} (1^{2} + 1^{3}) \\
-    &= \frac{1}{80} ((4 + 8) - (1 + 1)) \\
-    &= \frac{1}{80} (12 - 2) \\
-    &= \frac{1}{80} (10) \\
-    &= \frac{1}{8} = 0.125. \\
+F(2) - F(1) &= F(2) - F(1) \\
+  &= \frac{1}{80} (2^{2} + 2^{3}) - \frac{1}{80} (1^{2} + 1^{3}) \\
+  &= \frac{1}{80} (10) \\
+  &= \frac{1}{8}.
 \end{aligned}
 $$
-
-```{r}
-F <- function(x) {(1/80) * (x**2 + x**3)}; F(2) - F(1)
-```
 
 ### q.32
 
@@ -581,17 +490,13 @@ F <- function(x) {(1/80) * (x**2 + x**3)}; F(2) - F(1)
 Let $X$ be a discrete rv that represents the number of people who need to pass through the metal detector until the next to activate it.
 Then $X$ is modelled by the geometric distribution, $X \sim G(p)$, where $p=0.2$ is the probability that an individual activates the metal detector, so $X \sim G(0.4)$.
 
-Tthe probability $P(X=4)$ is given by
+The probability $P(X=4)$ is given by
 
 $$
 \begin{aligned}
   P(X=4) = (1-p)^{y-1} p = 0.8^{3} 0.2 = 0.1024.
 \end{aligned}
 $$
-
-```{r q.32.a}
-dgeom(x = 3, prob = 0.2)  # note, @param x -> (x-1) as defined by M248
-```
 
 #### (b)
 
@@ -608,15 +513,11 @@ $$
 \end{aligned}
 $$
 
-```{r q.32.b}
-dbinom(3, 10, 0.2)
-```
-
 ### q.33
 
 #### (a)
 
-*Mean of a continuous rv (HB p.9)*
+*Mean of a rv (HB p.9) : **continuous***
 
 The expected value $E(X)$ of a continuous random variable $X$ is defined as
 
@@ -640,7 +541,7 @@ Therefore, $E(X)=3/8$.
 
 #### (b)
 
-*Variance of a continuous rv (HB p.9)*
+*Variance of a rv (HB p.9) : **continuous***
 
 The $E(X^{2})$ of a continuous random variable $X$ is defined as
 
@@ -664,7 +565,7 @@ Therefore, $E(X^{2})=1/5$.
 
 #### (c)
 
-*Variance of a continuous rv (HB p.9)*
+*Variance of a rv (HB p.9) : **continuous***
 
 The variance $V(X)$ of a continuous random variable $X$ is defined as
 
@@ -685,7 +586,7 @@ Therefore, $V(X)=19/320 \simeq 0.059$, rounded to 3dp.
 
 #### (a)
 
-*Likelihood functions for discrete data (HB p.13)*
+*Finding the likelihood function of a sample (HB p.13) : **discrete***
 
 Using the p.m.f. of a geometric distribution, if $p(x_{i}; \theta) = \theta(1-\theta)^{x_{i}-1}$, then the likelihood of $\theta$, $L(\theta)$, will be
 
@@ -743,10 +644,10 @@ So $\widehat \theta \simeq 0.3077$.
 
 #### (a)
 
-*Approximate large-sample intervals for the difference between two proportions (HB p.15)*
+*CI for the difference between two proportions (HB p.15)*
 
 Let $n_{1} = 100, x_{1} = 33$ represent the sample from 2010, and $n_{2} = 150, x_{2} = 54$ represent the sample from 2013.
-Then the point estimate of the difference $\widehat d$ between the two samples, such that
+Then the point estimate of the difference $\widehat d$ between the two samples is
 
 $$
 \widehat d = p_{1} - p_{2} = \frac{33}{100} - \frac{54}{150} = 0.33 - 0.36 = -0.03.
@@ -757,24 +658,13 @@ $(d^{-}, d^{+})$, is given by
 
 $$
 \begin{aligned}
-  d^{-} &= -0.03 - 1.96 \sqrt{ \frac{0.33(0.67)}{100} + \frac{0.36(0.64)}{150} } \\
-    &\simeq -0.03 - 1.96 (0.0608) \\
-    &\simeq -0.1492 \\
-    &\simeq -0.15, \\
-  d^{+} &= -0.03 + 1.96 \sqrt{ \frac{0.33(0.67)}{100} + \frac{0.36(0.64)}{150} } \\
-    &\simeq -0.03 + 1.96 (0.0608) \\
-    &\simeq 0.0891 \\
-    &\simeq 0.09.
+d^{-} &= -0.03 - 1.96 \sqrt{ \frac{0.33(0.67)}{100} + \frac{0.36(0.64)}{150} }
+  \simeq -0.15, \\
+d^{+} &= -0.03 + 1.96 \sqrt{ \frac{0.33(0.67)}{100} + \frac{0.36(0.64)}{150} } \simeq 0.09.
 \end{aligned}
 $$
 
 Therefore, a realised approximate 95% confidence interval for this scenario would be $(-0.15, 0.09)$.
-
-```{r q.35.a}
-zconfint_diff_props(0.95, 33, 100, 54, 150)
-```
-
-    ## Error due to rounding
 
 #### (b)
 
@@ -804,7 +694,7 @@ $$
 
 #### (b)
 
-*Calculating the test statistic of the Wilcoxon signed rank test (HB p.19)*
+*The Wilcoxon signed rank test (HB p.19)*
 
 | Tree                      | 1    | 2    | 3   | 4   | 5   | 6   | 7   | 8   | 9    | 10   | 11  | 12   | 13   |
 |---------------------------|------|------|-----|-----|-----|-----|-----|-----|------|------|-----|------|------|
@@ -821,7 +711,7 @@ $$
 
 #### (c)
 
-*Normal approximation to the null distribution of the Wilcoxon test statistic (HB p.20)*
+*Normal approximation of the Wilcoxon test statistic (HB p.20)*
 
 Under the null hypothesis, for a sample of size $12$ (excluding the zero difference), the Wilcoxon signed rank test statistic $W_{+}$ has mean,
 
@@ -839,14 +729,9 @@ $$
 \end{aligned}
 $$
 
-```{r}
-# returns (z, Ew, Vw)
-calc_norm_approx_wilcoxon(65, 12)
-```
-
 #### (d)
 
-*Normal approximation to the null distribution of the Wilcoxon test statistic (HB p.20) and Interpreting $p$-values (HB p.18)*
+*Normal approximation of the Wilcoxon test statistic (HB p.20) and Interpreting $p$-values (HB p.18)*
 
 In this scenario, the observed sum of ranks for the positive differences is $w_{+} = 65$, so the corresponding observed value of $Z$ is
 
@@ -861,18 +746,36 @@ P(Z \geq 2.04) = 1 - P(Z \leq 2.04) = 1 - 0.9793 = 0.0207.
 $$
 
 So, according to the approximation, the probability of obtaining a Wilcoxon signed rank test statistic of $65$ or greater is approximately $0.0207$.
-For a two-sided test, the $p$-value is double this:
+For a two-sided test, the $p$-value is double this, so
 
 $$
 P(Z \leq -2.04) + P(Z \geq 2.04) = 2 P(Z \geq 2.04) = 0.0414.
 $$
 
 Given that $p=0.0414$, there is moderate against the null hypothesis that there is no difference in aluminium concentrations in the wood of trees between August and November.
-Looking at the data, the test statistic is large, so it seems that the population median difference in aluminium concentrations between August and November is greater than zero, suggesting that there is an increase in Aluminium concentrations.
+The test statistic is greater than zero, so it suggests that the population median difference in aluminium concentrations between August and November is greater than zero, suggesting that there is an increase in Aluminium concentrations.
 
 ### q.37
 
-==Not answered==
+#### (a)
+
+*Interpreting the regression coefficients in multiple linear regression*
+
+If the value of the percentage of individuals who earned \$3500 or more for each occupation increased ($x_{1}$) by one percentage point and the value of the percentage of individuals who were high school graduates ($x_{2}$) remains fixed, then the measure of prestige for each occupation would be expected to rise by 0.599
+
+#### (b)
+
+*Using a fitted model (HB p.22) to find the residual value*
+
+Using the fitted model, a small company with $x_{1} = 8$ and $x_{2} = 64$ is predicted to have annual profits (in £100,000s)
+
+$$y = 0.930 - 0.3662 (8) + 0.03543 (64) \simeq 0.268.$$
+
+Given the actual value was $y=0.292$, this gives a residual value of
+
+$$
+w = 0.292 - 0.268 = 0.024.
+$$
 
 ### q.38
 
