--- a/md/2018-06-soln.md
+++ b/md/2018-06-soln.md
@@ -1,33 +1,16 @@
 ---
 title: "M248 June 2018"
-date: '2021-04-22'
-output:
-  html_notebook:
-    toc: true
-    toc_float: true
-    toc_depth: 2
+date: 2021-04-22
 ---
-
-## Updates
-
-**2021-04-27:** Partial solution uploaded
-
-## Setup
-
-Path to script: **ljk233/AutomatingM248/src/r/calculators.r**
-
-```{r setup}
-source("../src/r/calculators.r")
-```
 
 ## Section A
 
 ### q.01
 
 **A.**
-*Probability density functions (HB p.7)*
+*Calculating probabilities using a probability function (HB p.7) : **p.d.f.***
 
-If $f(x) = \frac{2}{9}(1+x), /> x \in (-1, 2)$ then the probability $P(0 \leq X < 1)$ is given by
+If $f(x) = \frac{2}{9}(1+x)$, $x \in (-1, 2)$ then the probability $P(0 \leq X < 1)$ is given by
 
 $$
 \begin{aligned}
@@ -36,11 +19,6 @@ P(0 \leq X < 1) &= \int_{0}^{1} \frac{2}{9}(1+x) \> dx \\
   &= \frac{2}{9} \bigg(1+\frac{1}{2} - (0+0) \bigg) = \frac{1}{3}.
 \end{aligned}
 $$
-
-```{r q.01}
-f <- function (x) {(2/9)*(1+x)}  # declare the fn
-integrate(f, 0, 1)  # integrate over range
-```
 
 ### q.02
 
@@ -62,15 +40,10 @@ K = \int_{0}^{1} x^{4} \> dx = \bigg[ \frac{1}{5} x^{5} \bigg]_{0}^{1}
   = \frac{1}{5} ( 1 - 0 ) = \frac{1}{5}.
 $$
 
-```{r q.02}
-f <- function (x) {(5)*(x**4)}  # declare the fn
-integrate(f, 0, 1)  # integrate over range (0,1)
-```
-
 ### q.03
 
 **F.**
-*Cumulative distribution functions of a discrete rv (HB p.7)*
+*Calculating probabilities using the c.d.f. : **discrete***
 
 The $P(X \leq 4)$ is given by
 
@@ -85,7 +58,7 @@ $$
 ### q.04
 
 **D.**
-*Probability density functions (HB p.7)*
+*Calculating probabilities using the c.d.f. : **continuous***
 
 The probability $P(1 \leq X \leq 2) = F(2) - F(1)$ is given by
 
@@ -100,7 +73,7 @@ $$
 ### q.05
 
 **E.**
-*Range of a discrete uniform distribution (HB p.26)*
+*Choosing a model based on the range of the standard probability models (HB p.26, 27*)
 
 The range of $X$ is $\{1, 2, 3, 4, 5\}$.
 
@@ -114,7 +87,7 @@ Therefore it must be a **discrete uniform distribution.**
 ### q.06
 
 **E.**
-*Mean of a discrete rv (HB p.7)*
+*Mean of a rv (HB p.7) : **discrete***
 
 The $E(X) = \sum_{x} x \>p(x)$, so
 
@@ -124,21 +97,22 @@ $$
 \end{aligned}
 $$
 
-```{r q.06}
-x <- seq.int(from = 0, to = 4)
-f <- c(0.1, 0.25, 0.25, 0.2, 0.2)
-sum(x*f)
-```
-
 ### q.07
 
 **E.**
-*Mean of a linear function of rvs (HB p.9)*
+*Mean of a linear function of a rv (HB p.9)*
 
-We know that $E(X) = 1$, and that $Y = 20 - 3X$ so $a=-3, b=20$, therefore
+For a random variable $Y = 20 - 3X$, then
 
 $$
-E(Y) = aE(X) + b = -3(1) + 20 = 17
+E(Y) = aE(X) + b,
+$$
+
+where $E(X) = 1$, $a = -3$, and $b=20$.
+Therefore,
+
+$$
+E(Y) = -3(1) + 20 = 17.
 $$
 
 ### q.08
@@ -146,16 +120,17 @@ $$
 **B.**
 *Variance of a linear function of rvs (HB p.9)*
 
-We know that $V(X) = 4$, and that $Y = 20 - 3X$ so $a=-3$, therefore
+For a random variable $Y = 20 - 3X$, then
 
 $$
-V(Y) = a^{2} V(X) = (-3)^{2} \> (4) = 36,
+S(Y) = \sqrt{V(Y)} = \sqrt{a^{2} V(X)} = |a| \sqrt{V(X)},
 $$
 
-and so
+where $V(X) = 4$ and $a = -3$.
+Therefore,
 
 $$
-S(Y) = \sqrt{V(Y)} = \sqrt{36} = 6.
+S(Y) = |-3| \sqrt{4} = 6.
 $$
 
 ### q.09
@@ -174,10 +149,6 @@ $$
 \end{aligned}
 $$
 
-```{r q.09}
-dpois(3, 5)
-```
-
 ### q.10
 
 **D.**
@@ -193,10 +164,6 @@ $$
   &\simeq  0.125.
 \end{aligned}
 $$
-
-```{r q.10}
-ppois(2, 5)
-```
 
 ### q.11
 
@@ -214,14 +181,10 @@ $$
 \end{aligned}
 $$
 
-```{r q.11}
-pexp(1/6, 5)
-```
-
 ### q.12
 
 **F.**
-*Poisson process (HB p.10)*
+*Transforming the parameter of a Poisson distribution (HB p.10)*
 
 The number of emails that will arrive in 3 hours is distributed $\text{Poisson}(\lambda t)$, where $\lambda = 5$ emails per hour and $t=3$.
 Therefore $\text{Poisson}(15)$.
@@ -229,13 +192,11 @@ Therefore $\text{Poisson}(15)$.
 ### q.13
 
 **A.**
-*Population quantiles of a continuous rv (HB p.11).*
-
-*Note, used $\alpha$ as rational rather than decimal due to the range of possible solutions.*
+*Population quantiles of a rv (HB p.11) : **continuous***
 
 The $\alpha$-quantile of a continuous rv $X$ with c.d.f. $F(X)$ is defined as $F(x) = \alpha$.
 
-If $F(x) = 1 - \sqrt{1-x}, \> \alpha = 1/4$, then it must be that
+If $F(x) = 1 - \sqrt{1-x}$ and $\alpha = 1/4$, then it must be that
 
 $$
 \begin{aligned}
@@ -247,17 +208,12 @@ $$
 \end{aligned}
 $$
 
-```{r q.13}
-F <- function (x) {1 - sqrt(1 - x)};
-F(x = 7/16)
-```
-
 ### q.14
 
 **C.**
 *Difference between two independent normal rvs (HB p.11)*
 
-If $X \sim N(2,4)$, $Y \sim N(1,3)$, then $U = X - Y$ will also have a **normal distribution** with parameters
+If $X \sim N(2,4)$, $Y \sim N(1,3)$, then $U = X - Y$ will also be normally distributed with parameters,
 
 $$
 E(U) = E(X-Y) = E(X) - E(Y) = 2 - 1 = 1,
@@ -274,10 +230,10 @@ Hence $U = X - Y \sim N(1, 7)$.
 ### q.15
 
 **C.**
-*Probabilities for any non-standard normal (HB p.12)*
+*Probabilities for a normal distribution (HB p.12)*
 
 We know that $X \sim N(100, 15^{2})$.
-Then $P(90 < X < 125) = P(X < 125) - P(X < 90)$ is given by
+Then the probability $P(90 < X < 125)$ is given by
 
 $$
 \begin{aligned}
@@ -288,20 +244,14 @@ $$
 \end{aligned}
 $$
 
-```{r q.15}
-mean_ <- 100; std <- 15;
-pnorm(125, mean_, std) - pnorm(90, mean_, std)
-```
-
-    ## Small error due to rounding when transforming X -> Z
-
 ### q.16
 
 **B.**
-*Sampling distribution of the mean (HB p.12)*
+*Distribution of the sample mean (HB p.12)*
 
 We know $\mu_{X} = 69.1$, $\sigma^{2}_{X} = 9.4$ and $n=40$.
 Then $\overline{X}_{40}$ will have the distribution $\overline{X}_{40} \sim N(\mu_{X}, \sigma^{2}_{X}/n) = N (69.1, 0.235)$.
+
 And so $P(X < 68)$ is given by
 
 $$
@@ -313,14 +263,10 @@ $$
 \end{aligned}
 $$
 
-```{r q.16}
-pnorm(68, 69.1, sqrt(9.4/40))
-```
-
 ### q.17
 
 **C.**
-*Sampling distribution of the total (HB p.13) and quantiles of any non-standard normal (HB p.12)*
+*Distribution of the sample total (HB p.13) and quantiles of any non-standard normal (HB p.12)*
 
 The sample total $T_{n}$ is distributed $T_{n} \sim N \big( n \mu, (\sqrt{n} \sigma)^{2} \big)$.
 
@@ -335,7 +281,7 @@ $$
 ### q.18
 
 **C.**
-*Variance of unbiased estimators (U7.1, Ex.6)*
+*Variance of an unbiased estimator (U7.1, Ex.6)*
 
 If $X_{1} \sim N(\mu, 1)$, $X_{2} \sim N(\mu, 4)$, $X_{3} \sim N(\mu, 4)$ and $\widehat{\mu} = \frac{1}{6} (4X_{1} + X_{2} + X_{3})$, then
 
@@ -354,7 +300,7 @@ $$
 ### q.19
 
 **A.**
-*Approximate large-sample intervals when the estimators are transformed (HB p.14)*
+*Transforming a confidence interval (HB p.14)*
 
 The transformation $X = \frac{5}{9} (Y-32)$ is both linear and increasing.
 
@@ -371,20 +317,16 @@ Therefore, a new 95% confidence interval in degrees Celsius is $(118.5, 121.0)$.
 ### q.20
 
 **E.**
-*Critical values of exact confidence intervals for normal means (HB p.15)*
+*Critical values (HB p.16) of a t-test (HB p.17)*
 
 The critical value of a one-tail test $t$-test is the $(1-\alpha)$-quantile of $t(\nu)$, where $\nu$ is the degrees of freedom.
-The test is at a 1% significance level and has a sample size $n=101$, so $\alpha=0.01$ means $q_{1-\alpha} = 0.99$, and $\nu=n-1=101-1=100$.
+The test is at a 1% significance level so $\alpha=0.01$, and has a sample size $n=101$, meaning $q_{1-\alpha} = 0.99$ and $\nu=n-1=101-1=100$.
 
 Therefore the critical value is the **0.99**-quantile of $t(100)$, which is **2.364.**
 
-```{r q.20}
-qt(0.99, 100)
-```
-
 ### q.21
 
-*Anatomy of a hypothesis test (HB p.17)* and *Interpreting $p$-values (HB p.18)*
+*Significance level of a hypothesis test (HB p.17) and Interpreting a $p$-values (HB p.18)*
 
 **B.**
 **False**.
@@ -398,17 +340,16 @@ We can see that $p = 0.02 > 0.01 = \alpha$, so $H_{0}$ is not rejected.
 ### q.22
 
 **A.**
-*Calculating the power of a test (HB p.18)*
+*Calculating the power of a hypothesis test (HB p.18)*
 
-We know from the following from question:
+The power of this one-sided test at a 5% significance level will be
 
-- test is one-sided
-- the sample size $n=20$;
-- the standard deviation $\sigma = 0.25$
-- test is at a **5%** significance level, so $q_{1-\alpha} = q_{0.95} = 1.645$
-- true value of the mean $\mu = 0.2$, and the hypothesised mean is $\mu_{0} = 0$, so $d=\mu_{0}-\mu=0.2$.
+$$
+1 - \Phi \bigg( q_{1-\alpha} - \frac{d}{\sigma/\sqrt{n}} \bigg)
+$$
 
-The **power of the test** will therefore be
+where $q_{1-\alpha} = q_{0.95} = 1.645$, $d=0.2$, $\sigma=0.25$, and $n=20$.
+Therefore,
 
 $$
 \begin{aligned}
@@ -420,60 +361,41 @@ $$
 \end{aligned}
 $$
 
-```{r q.22}
-calc_test_power(
-  a = 0.05, d = 0.2, sd = 0.25, n = 20, one_sided = TRUE
-)
-```
-
-    ## Error due to rounding
-
 ### q.23
 
 **A.**
 *Choosing the sample size of a hypothesis test (HB p.19)*
 
-We know the following from the question:
+The required sample size $n$ of a two-sided hypothesis test at a 5% significance level is given by
 
-- test is two-sided
-- standard deviation $\sigma=1$
-- test is at a 5% significance level, so $q_{1-\alpha /2} = q_{0.975} = 1.960$
-- detect a mean discrepancy $d=0.25$
-- power is 85% $\equiv 0.85$, so $q_{1- \gamma} = q_{1- 0.85} = q_{0.15} = -q_{0.85} = -1.036$
+$$
+  n = \frac{\sigma}{d^{2}} (q_{1-\alpha/2} - q_{1-\gamma})^{2},
+$$
 
-The **required sample size** $n$ will therefore be
+where $q_{1-\alpha /2} = q_{0.975} = 1.960$, $d=0.25$, $\sigma=0.1$, and $q_{1- \gamma} = q_{0.15} = -1.036$.
+Therefore,
 
 $$
 \begin{aligned}
-  n = \frac{\sigma}{d^{2}} (q_{1-\alpha/2} - q_{1-\gamma})^{2} &= \frac{1}{0.25^{2}} (1.960 - - 1.036)^{2} \\
+  n = &= \frac{1}{0.25^{2}} (1.960 - - 1.036)^{2} \\
     &= 16(1.960 + 1.036)^{2} \\
     &= 143.6 \simeq 144.
 \end{aligned}
 $$
 
-```{r}
-calc_sample_size(
-  a = 0.05, d = 0.25, sd = 1, pow_ = 85, one_sided = FALSE
-)
-```
-
 ### q.24
 
 **C.**
-*Chi-squared goodness-of-fit test (HB p.21)*
+*Degrees of freedom of a **Chi-squared** goodness-of-fit test (HB p.21)*
 
-The degrees of freedom of a **chi-squared** goodness-of-fit test is $k-p-1$, where
-
-- $k=4$ is the number of categories
-- $p=1$ is the number of estimated parameters
-  - $p$ was estimated
+The degrees of freedom of a **chi-squared** goodness-of-fit test is $k-p-1$, where $k=4$ is the number of categories, and $p=1$ is the number of estimated parameters.
 
 Therefore the degrees of freedom is $\nu=4-1-1=2$.
 
 ### q.25
 
 **F.**
-*Chi-squared goodness-of-fit test (HB p.21)*
+*Calculating the test statistic of **Chi-squared** goodness-of-fit test (HB p.21)*
 
 The **chi-squared** test statistic is
 
@@ -486,13 +408,6 @@ so in this case, the **chi-squared** test statistic will be
 $$
 \chi^{2} = \frac{(44-55.4)^{2}}{55.4} + \dots + \frac{(10-6.2)^{2}}{6.2} \simeq 6.94.
 $$
-
-```{r q.25}
-obs <- c(44, 27, 19, 10)
-exp <- c(55.4, 24.7, 13.7, 6.2)
-
-calc_chi_sq(obs, exp)
-```
 
 ### q.26
 
@@ -512,10 +427,6 @@ $$
 S_{yy} = 34692 - \frac{600^{2}}{14} = 8977.7142 \ldots \simeq 8977.7.
 $$
 
-```{r q.26}
-calc_slr_std(sum_y = 600, sum_sq = 34692, n = 14)
-```
-
 ### q.27
 
 **C.**
@@ -534,10 +445,6 @@ $$
 S_{xy} = 6912 - \frac{(118)(600)}{14} = 1854.8571 \ldots \simeq 1854.9.
 $$
 
-```{r q.27}
-calc_slr_std(sum_x = 118, sum_y = 600, sum_sq = 6912, n = 14)
-```
-
 ### q.28
 
 **B**.
@@ -549,29 +456,20 @@ $$
 \widehat{\beta} \pm t \frac{s}{\sqrt{S_{xx}}}.
 $$
 
-We know that $\widehat{\beta} = 0.76 \> s^{2} = 91.5, \> S_{xx} = 574.29$.
-The value $t\simeq 2.086$ is the $0.975$-quantile of $t(20)$.
+We know that $\widehat{\beta} = 0.76 \> s^{2} = 91.5, \> S_{xx} = 574.29$, and $t\simeq 2.086$ is the $0.975$-quantile of $t(20)$.
 So,
 
 $$
-\beta^{+} = 0.76 + 2.086 \bigg( \sqrt{\frac{91.5}{574.24}} \bigg) \simeq 1.593,
+\beta^{-} = 0.76 - 2.086 \bigg( \sqrt{\frac{91.5}{574.24}} \bigg) \simeq -0.072,
 $$
 
 and
 
 $$
-\beta^{+} = 0.76 - 2.086 \bigg( \sqrt{\frac{91.5}{574.24}} \bigg) \simeq -0.072.
+\beta^{+} = 0.76 + 2.086 \bigg( \sqrt{\frac{91.5}{574.24}} \bigg) \simeq 1.593.
 $$
 
 Therefore $(-0.072, 1.593) \approx (-0.08, 1.60)$.
-
-```{r q.28}
-calc_conf_int_beta(
-  ci = 0.95, b = 0.76, n = 21, Sxx = 574.24, var = 91.5
-)
-```
-
-    ## Small error due to rounding
 
 ### q.29
 
@@ -606,10 +504,6 @@ $$
 \end{aligned}
 $$
 
-```{r q.31.a}
-dbinom(2, 5, 0.4)
-```
-
 #### (b)
 
 *Geometric distribution (HB p.8)*
@@ -625,10 +519,6 @@ $$
 \end{aligned}
 $$
 
-```{r q.31.b}
-dgeom(2, 0.4)  # note, @param x -> (x-1) as defined by M248
-```
-
 #### (c)
 
 *Expected value of a standard probability model (HB p.26, 27)*
@@ -641,7 +531,7 @@ $$
 
 ### q.32
 
-*Variance of a continuous rv (HB p.9)*
+*Variance of a rv (HB p.9) : **continuous***
 
 The variance $V(X)$ of a continuous random variable $X$ is defined as
 
@@ -653,7 +543,7 @@ We know that $E(X) = 3/5$, so let us calculate $E(X^{2})$,
 
 $$
 \begin{aligned}
-  E(X^{2}) = \int_{0}^{1} x^{2} \> \{12 x^{2} (1-x) \} \> dx &= 12 \int_{0}^{1} x^{4} (1-x) \> dx \\
+E(X^{2}) &= \int_{0}^{1} x^{2} \> \{12 x^{2} (1-x) \} \> dx \\
     &= 12 \int_{0}^{1} x^{4} - x^{5} \> dx \\
     &= 12 \bigg[ \frac{1}{5} x^{5} - \frac{1}{6} x^{6} \bigg]_{0}^{1} \\
     &= 12 \bigg( \frac{1}{5} (1)^{5} - \frac{1}{6} (1)^{6} - (0-0) \bigg) \\
@@ -666,7 +556,7 @@ And so,
 
 $$
 \begin{aligned}
-  V(X) = E(X^{2}) - E(X)^{2} = \frac{2}{5} - \bigg( \frac{3}{5} \bigg)^{2} = \frac{1}{25}.
+V(X) = E(X^{2}) - E(X)^{2} = \frac{2}{5} - \bigg( \frac{3}{5} \bigg)^{2} = \frac{1}{25}.
 \end{aligned}
 $$
 
@@ -676,7 +566,7 @@ Therefore, $V(X) = 1/25$.
 
 #### (a)
 
-*Likelihood functions for continuous data (HB p.13)*
+*Finding the likelihood function of a sample (HB p.13)*
 
 If $f(x; \theta) = \theta e^{-\theta x}$, then the likelihood of $\theta$, $L(\theta)$, will be
 
@@ -734,7 +624,7 @@ $$
 
 #### (d)
 
-*MLE of a standard distribution (HB p.26m 27)*
+*MLE of a standard probability distribution (HB p.26m 27)*
 
 The MLE of an exponential distribution is $\widehat \lambda = 1/\overline{X}$.
 
@@ -764,7 +654,7 @@ Therefore, the assumption of equal variances is valid.
 
 *Exact confidence intervals for the difference between two normal means (HB p.16)*
 
-Given two independent samples from distributions with a common variance, the pooled estimated of the common variance is given by
+Given two independent samples from distributions with a common variance, the pooled estimate of the common variance is given by
 
 $$
 s_{P}^{2} = \frac{(n_{1}-1) s_{1}^{2} + (n_{2}-1) s_{2}^{2}}{n_{1} + n_{2} - 2}.
@@ -774,27 +664,22 @@ We have been given sample variances $s_{C}^{2} = 103.84$ and $s_{N}^{2} = 115.99
 
 $$
 \begin{aligned}
-  s_{P}^{2} = \frac{(n_{C}-1) s_{C}^{2} + (n_{N}-1) s_{N}^{2}}{n_{C} + n_{N} - 2} &= \frac{(7-1) 103.84 + (13-1) 115.99}{7 + 13 - 2} \\
-    &= \frac{(6) 103.84 + (12) 115.99}{18} \\
-    &= \frac{623.04 + 1391.88}{18} \\
-    &= \frac{2014.92}{18} \\
-    &= 111.94.
+s_{P}^{2} &= \frac{(7-1) 103.84 + (13-1) 115.99}{7 + 13 - 2} \\
+&= \frac{(6) 103.84 + (12) 115.99}{18} \\
+&= \frac{2014.92}{18} \\
+&= 111.94.
 \end{aligned}
 $$
 
 And so the pooled estimate of the common population standard deviation is $\sqrt{11.94} \simeq 10.58$ years.
 
-```{r q.34.b}
-calc_pooled_sample_var(v1 = 103.84, n1 = 7, v2 = 115.99, n2 = 13)**(0.5)
-```
-
 #### (c)
 
 *Exact confidence intervals for the difference between two normal means (HB p.16)*
 
-This is a **two-tail test**, so the required quantile we need is the $(1 - (\alpha/2))$-quantile of $t(\nu)$.
+To calculate a $90\% = 100(1-\alpha)\%$ exact confidence interval, we require the $(1 - (\alpha/2))$-quantile of $t(\nu)$, where $\nu$ is the degrees of freedom.
 
-We have been asked to construct a $90\% = 100(1-\alpha)\%$ confidence interval. Let us calculate $\alpha$,
+Let us calculate $\alpha$,
 
 $$
 \begin{aligned}
@@ -804,54 +689,27 @@ $$
 \end{aligned}
 $$
 
-Therefore the required quantile is $(1-(0.1/2)) = 0.95$-quantile.
-
-The parameter $\nu = n_{C} + n_{P} - 2 = 7 + 13 - 2 = 18$  is the degrees of freedom of a $t$-distribution.
+There will be $n_{C} + n_{P} - 2 = 7 + 13 - 2 = 18$  degrees of freedom for the $t$-distribution.
 
 Therefore, we require the $0.95$-quantile of $t(18)$, which is $q_{0.95} = 1.734$.
-
-```{r q.35.c}
-qt(0.95, 18)
-```
 
 #### (d)
 
 *Exact confidence intervals for the difference between two normal means (HB p.16)*
 
-An exact confidence interval for the difference between two normal means, $d = \mu_{1} - \mu_{2}$, is given by
+We know that:
 
-$$
-\begin{aligned}
-(d^{-}, d^{+}) = \bigg( &\overline{x}_{1} - \overline{x}_{2} - t \> s_{P} \> \sqrt{\frac{1}{n_{1}} + \frac{1}{n_{2}}}, \\
-  &\overline{x}_{1} - \overline{x}_{2} + t \> s_{P} \> \sqrt{\frac{1}{n_{1}} + \frac{1}{n_{2}}} \bigg).
-\end{aligned}
-$$
-
-We know that
-
-- $\overline{x}_{C} = 49.29$
-- $\overline{x}_{N} = 42.08$
+- $d = \overline{x}_{C} - \overline{x}_{N} = 7.21$
+- $n_{C} = 7, \> n_{N} = 13$
 - $t \simeq 1.734$
-- $s_{P} = \sqrt{111.94}$
-- $n_{C} = 7$
-- $n_{N} = 13$
+- $s_{P} = \sqrt{111.94}$,
 
-so
+so an exact confidence interval for the difference between two normal means, $d = \mu_{1} - \mu_{2}$, is given by
 
 $$
 \begin{aligned}
-  d^{-} = \overline{x}_{C} - \overline{x}_{N} - t \> s_{P} \> \sqrt{\frac{1}{n_{C}} + \frac{1}{n_{N}}} &= 49.29 - 42.08 - \bigg\{ 1.734 (111.94)^{\frac{1}{2}} \bigg( \frac{1}{7} + \frac{1}{13} \bigg)^{\frac{1}{2}} \bigg\} \\
-    &= 7.21 - \bigg\{ 1.734 (111.94)^{\frac{1}{2}} \bigg( \frac{20}{91} \bigg)^{\frac{1}{2}} \bigg\} \\
-    &\simeq -1.39
-\end{aligned}
-$$
-
-and
-
-$$
-\begin{aligned}
-  d^{+} = \overline{x}_{C} - \overline{x}_{N} + t \> s_{P} \> \sqrt{\frac{1}{n_{C}} + \frac{1}{n_{N}}} &= 7.21 + \bigg\{ 1.734 (111.94)^{\frac{1}{2}} \bigg( \frac{20}{91} \bigg)^{\frac{1}{2}} \bigg\} \\
-    &\simeq 15.81.
+  d^{-} &= d - t \> s_{P} \> \sqrt{\frac{1}{n_{C}} + \frac{1}{n_{N}}} = 7.21 - \bigg\{ 1.734 (111.94)^{\frac{1}{2}} \bigg( \frac{1}{7} + \frac{1}{13} \bigg)^{\frac{1}{2}} \bigg\} \simeq -1.39, \\
+d^{+} &= d + t \> s_{P} \> \sqrt{\frac{1}{n_{C}} + \frac{1}{n_{N}}} \simeq 15.81.
 \end{aligned}
 $$
 
@@ -859,21 +717,15 @@ Hence, a 90% two-sample t-interval for the difference between the population mea
 
 It can be seen the realised 90% confidence interval for $d$ contains $0$, so it does not support a claim that the population ages differ.
 
-```{r q.35.d}
-tconfint_diff_means (
-  a = 0.9, x1 = 49.29, n1 = 7, x2 = 42.08, n2 = 13, sp = sqrt(111.94)
-)
-```
-
 #### (e)
 
-Repeated experiments interpretation of confidence intervals (HB p.14)
+*Repeated experiments interpretation of confidence intervals (HB p.14)*
 
-**TO BE ADDED**
+If this entire trial was repeated independently a large number of times, and on each occasion a 90% confidence interval for the difference between means were calculated, then about 90% of these intervals would contain the difference between population means ages of patients in Group C and N, respectively.
+
+The 90% confidence interval actually observed, (-1.39, 15.81), is just one observation on a random interval, and may or may not contain the population mean.
 
 ### q.35
-
-*Anatomy of a hypothesis test (HB p.17) and Interpreting $p$-values (HB p.18)*
 
 1. It is a **one-sided test** as $H_{1}: p > 0.5$.
 2. A $p$-value of 0.055 corresponds to "weak or little evidence against the null hypothesis", not "little to no evidence against the null hypothesis".
@@ -897,9 +749,9 @@ where $\ell$ is the underlying difference in location between the populations fr
 
 *The Mann–Whitney test (HB p.20)*
 
-The test statistic $u_{A}$ is the sum of the ranks in sample A, which has been defined as the horses of heavy weights.
+The test statistic $U_{A}$ is the sum of the ranks in sample A, which has been defined as the horses of heavy weights.
 
-Therefore $u_{A}$ is given by
+Therefore,
 
 $$
 \begin{aligned}
@@ -929,14 +781,10 @@ $$
 \begin{aligned}
   V(U_{A}) = \frac{1}{12} (n_{A}) (n_{B}) (n_{A} + n_{B} + 1) &= \frac{1}{12} (8) (11) (8+11+1) \\
     &= \frac{1}{12} (1760) \\
-    &= 146.666 \ldots \simeq 146.67.
+    &= 146.666 \ldots \\
+    &\simeq 146.67.
 \end{aligned}
 $$
-
-```{r q.36.c}
-# return (z, Eu, Vu)
-calc_norm_approx_mann_whit(u = 96, nA = 8, nB = 11)
-```
 
 #### (d)
 
@@ -948,20 +796,16 @@ $$
 \begin{aligned}
   Z = \frac{U_{A} - E(U_{A})}{\sqrt{V(U_{A})}} &\simeq \frac{96 - 80}{\sqrt{146.67)}} \\
     &= \frac{96 - 80}{\sqrt{146.67)}} \\
-    &= 1.32114 \ldots \simeq 1.32.
+    &= 1.32114 \ldots \\
+    &\simeq 1.32.
 \end{aligned}
 $$
 
-Therefore the $Z \simeq 1.32$.
-
-```{r q.36.d}
-# return (z, Eu, Vu)
-calc_norm_approx_mann_whit(u = 96, nA = 8, nB = 11)
-```
+Therefore $Z \simeq 1.32$.
 
 #### (e)
 
-*Interpreting $p$-values (HB p.18)*
+*Calculating $p$-values (HB p.18)*
 
 The test is two-sided, and so, using the table of probabilities of the standard normal distribution in the Handbook, the $p$-value is therefore
 
@@ -978,4 +822,35 @@ Given that $p=0.1868$, there is little to no evidence against the null hypothesi
 
 ### q.37
 
+#### (a)
 
+*Interpreting the $p$-values in multiple linear regression*
+
+For the two-sided test of the null hypothesis $H_{0} : \beta_{1} = 0$, since $p < 0.001 < 0.01$, there is strong evidence to suggest that $\beta_{1}$ is not equal to zero.
+Likewise, for the two-sided test of the null hypothesis $H_{0} : \beta_{2} = 0$, since $p < 0.001 < 0.01$, there is strong evidence to suggest that $\beta_{2}$ is not equal to zero.
+Therefore, there is strong evidence that both explanatory variables($x_{1}$ and $x_{1}$ together influence the annual profit of a small campany.
+
+#### (b)
+
+There is no particular pattern in the residual plot, so it seems the assumption that the residuals come from a distribution with constant, zero mean an constant variance is a reasonable one.
+
+The points in the normal probability lot roughly follows a straight line, so the assumption that the residuals are normally distributed is also a reasonable one.
+
+#### (c)
+
+*Using a fitted model (HB p.22) to find the residual value*
+
+Using the fitted model, a small company with $x_{1} = 8$ and $x_{2} = 64$ is predicted to have annual profits (in £100,000s)
+
+$$y = 0.930 - 0.3662 (8) + 0.03543 (64) \simeq 0.268.$$
+
+Given the actual value was $y=0.292$, this gives a residual value of
+
+$$
+w = 0.292 - 0.268 = 0.024.
+$$
+
+#### (d)
+
+The new fitted model $y = \alpha + \beta e^{\lambda x}$ is not linear.
+Hence, the new model could not be used to fit the data using the method of least squares.
