--- a/md/2019-06-soln.md
+++ b/md/2019-06-soln.md
@@ -25,7 +25,7 @@ F. No, $\sum x \neq 1$
 ### q.02
 
 **C.**
-*Calculating a probability using probability density functions (HB p.7)*
+*Calculating probabilities using a probability function (HB p.7) : **p.d.f.***
 
 The probability $P(2 \leq X \leq 4)$ is given by
 
