--- a/docs/Past Paper Solutions/m248-201806.md
+++ b/docs/Past Paper Solutions/m248-201806.md
@@ -8,7 +8,7 @@ date: 2021-04-22
 ### q.01
 
 **A.**
-*Calculating probabilities using a probability function (HB p.7) : **p.d.f.***
+*Calculating probabilities using a probability function (HB p.7) : p.d.f.*
 
 If $f(x) = \frac{2}{9}(1+x)$, $x \in (-1, 2)$ then the probability $P(0 \leq X < 1)$ is given by
 
@@ -43,7 +43,7 @@ $$
 ### q.03
 
 **F.**
-*Calculating probabilities using the c.d.f. : **discrete***
+*Calculating probabilities using the c.d.f. : discrete*
 
 The $P(X \leq 4)$ is given by
 
@@ -58,7 +58,7 @@ $$
 ### q.04
 
 **D.**
-*Calculating probabilities using the c.d.f. : **continuous***
+*Calculating probabilities using the c.d.f. : continuous*
 
 The probability $P(1 \leq X \leq 2) = F(2) - F(1)$ is given by
 
@@ -87,7 +87,7 @@ Therefore it must be a **discrete uniform distribution.**
 ### q.06
 
 **E.**
-*Mean of a rv (HB p.7) : **discrete***
+*Mean of a rv (HB p.7) : discrete*
 
 The $E(X) = \sum_{x} x \>p(x)$, so
 
@@ -192,7 +192,7 @@ Therefore $\text{Poisson}(15)$.
 ### q.13
 
 **A.**
-*Population quantiles of a rv (HB p.11) : **continuous***
+*Population quantiles of a rv (HB p.11) : continuous*
 
 The $\alpha$-quantile of a continuous rv $X$ with c.d.f. $F(X)$ is defined as $F(x) = \alpha$.
 
@@ -531,7 +531,7 @@ $$
 
 ### q.32
 
-*Variance of a rv (HB p.9) : **continuous***
+*Variance of a rv (HB p.9) : continuous*
 
 The variance $V(X)$ of a continuous random variable $X$ is defined as
 
@@ -828,13 +828,13 @@ Given that $p=0.1868$, there is little to no evidence against the null hypothesi
 
 For the two-sided test of the null hypothesis $H_{0} : \beta_{1} = 0$, since $p < 0.001 < 0.01$, there is strong evidence to suggest that $\beta_{1}$ is not equal to zero.
 Likewise, for the two-sided test of the null hypothesis $H_{0} : \beta_{2} = 0$, since $p < 0.001 < 0.01$, there is strong evidence to suggest that $\beta_{2}$ is not equal to zero.
-Therefore, there is strong evidence that both explanatory variables($x_{1}$ and $x_{1}$ together influence the annual profit of a small campany.
+Therefore, there is strong evidence that both explanatory variables($x_{1}$ and $x_{1}$) together influence the annual profit of a small campany.
 
 #### (b)
 
 There is no particular pattern in the residual plot, so it seems the assumption that the residuals come from a distribution with constant, zero mean an constant variance is a reasonable one.
 
-The points in the normal probability lot roughly follows a straight line, so the assumption that the residuals are normally distributed is also a reasonable one.
+The points in the normal probability plot roughly follows a straight line, so the assumption that the residuals are normally distributed is also a reasonable one.
 
 #### (c)
 
