--- a/docs/Past Paper Solutions/m248-201906.md
+++ b/docs/Past Paper Solutions/m248-201906.md
@@ -8,7 +8,7 @@ date: 2021-04-22
 ### q.01
 
 **E.**
-*Checking the validity of a probability function (HB p.7) : **discrete***
+*Checking the validity of a probability function (HB p.7) : discrete*
 
 A. No, $\sum x \neq 1$
 
@@ -18,14 +18,14 @@ C. No, $p(2) \leq 0$
 
 D. No, $\sum x \neq 1$
 
-E. Yes, meets both properties.
+E. Yes, satisfies both properties.
 
 F. No, $\sum x \neq 1$
 
 ### q.02
 
 **C.**
-*Calculating probabilities using a probability function (HB p.7) : **p.d.f.***
+*Calculating probabilities using a probability function (HB p.7) : p.d.f.*
 
 The probability $P(2 \leq X \leq 4)$ is given by
 
@@ -62,7 +62,7 @@ $$
 ### q.04
 
 **E.**
-*Calculating probabilities using the c.d.f. : **discrete***
+*Calculating probabilities using the c.d.f. : discrete*
 
 The c.d.f. of $X$ at $x=3$ is given by
 
@@ -108,7 +108,7 @@ $$
 ### q.07
 
 **E.**
-*Variance a linear function of rvs (HB p.9)*
+*Variance of a linear function of rvs (HB p.9)*
 
 For a random variable $Y=-2-2X$, then
 
@@ -188,7 +188,7 @@ F. **False**, if $X$ has an *exponential distribution* then $X \sim M(\lambda)$,
 ### q.13
 
 **C.**
-*Population quantiles rv (HB p.11) : **continuous***
+*Population quantiles rv (HB p.11) : continuous*
 
 The $\alpha$-quantile of a continuous rv $X$ with c.d.f. $F(X)$ is defined as $F(x) = \alpha$.
 
@@ -329,7 +329,7 @@ $$
 where $t$ is the $(1-(\alpha/2))$-quantile of $t(n-1)$.
 
 Here we have $\overline{x}=112.5$, $n=10$, and $s=35.1$.
-The value $t=3.250$ is $0.995$-quantile of the $t(9)$ distribution.
+The value $t=3.250$ is the $0.995$-quantile of the $t(9)$ distribution.
 So the upper limit is given by
 
 $$
@@ -411,13 +411,13 @@ $$
 ### q.26
 
 **B.**
-*Least squares estimate (HB 22) : **intercept***
+*Least squares estimate (HB 22) : intercept*
 
 The least squares estimate of $\beta$ is
 
-$
+$$
 \beta = \frac{S_{xy}}{S_{xx}} = \frac{962.35}{457.44} = 2.10377 \ldots
-$
+$$
 
 Therefore, the least squares estimate of the intercept, $\alpha$, is
 
@@ -433,7 +433,7 @@ $$
 ### q.28
 
 **A and F.**
-*Transformations (HB p.23) : **skew data***
+*Transformations (HB p.23) : skew data*
 
 The data is left skew, so we go up the ladder of powers.
 
@@ -452,7 +452,7 @@ $$
 
 ### q.30
 
-*Finding the c.d.f. of a rv : **continuous***
+*Finding the c.d.f. of a rv : continuous*
 
 If $f(x) = \frac{1}{78} (6x^{2} + 2x + 5)$, where $x \in (0,3)$, then the $F(x)$ will be,
 
@@ -468,14 +468,13 @@ $$
 
 ### q.31
 
-*Calculating probabilities using the c.d.f. (HB p.7) : **continuous***
+*Calculating probabilities using the c.d.f. (HB p.7) : continuous*
 
 If $F(x) = \frac{1}{80} (x^{2} + x^{3})$, then $P(1 \leq X \leq 2) = F(2) - F(1)$ is given by
 
 $$
 \begin{aligned}
-F(2) - F(1) &= F(2) - F(1) \\
-  &= \frac{1}{80} (2^{2} + 2^{3}) - \frac{1}{80} (1^{2} + 1^{3}) \\
+F(2) - F(1) &= \frac{1}{80} (2^{2} + 2^{3}) - \frac{1}{80} (1^{2} + 1^{3}) \\
   &= \frac{1}{80} (10) \\
   &= \frac{1}{8}.
 \end{aligned}
@@ -502,14 +501,14 @@ $$
 
 *Binomial distribution (HB p.8)*
 
-Let $Y$ be a discrete rv that represents the number of apples that passes through the metal detector.
+Let $Y$ be a discrete rv that represents the number of people that passes through the metal detector.
 Then $Y$ is modelled by the binomial distribution, $Y \sim B(n,p)$, where $n=10$ is the sample size and $p=0.2$ is the probability that an individual sets off the metal detector, so $Y \sim B(10,0.2)$.
 
-The probability $P(X=3)$ is given by
+The probability $P(Y=3)$ is given by
 
 $$
 \begin{aligned}
-  P(X=3) = \binom{n}{x} p^x (1-p)^{n-x} = \binom{10}{3} 0.2^{3} (0.8)^{7} \simeq 0.2013.
+  P(Y=3) = \binom{n}{y} p^y (1-p)^{n-y} = \binom{10}{3} 0.2^{3} (0.8)^{7} \simeq 0.2013.
 \end{aligned}
 $$
 
@@ -517,7 +516,7 @@ $$
 
 #### (a)
 
-*Mean of a rv (HB p.9) : **continuous***
+*Mean of a rv (HB p.9) : continuous*
 
 The expected value $E(X)$ of a continuous random variable $X$ is defined as
 
@@ -537,11 +536,11 @@ $$
 \end{aligned}
 $$
 
-Therefore, $E(X)=3/8$.
+Hence, $E(X)=3/8$.
 
 #### (b)
 
-*Variance of a rv (HB p.9) : **continuous***
+*Variance of a rv (HB p.9) : continuous*
 
 The $E(X^{2})$ of a continuous random variable $X$ is defined as
 
@@ -553,7 +552,7 @@ Therefore,
 
 $$
 \begin{aligned}
-  E(X) = \int_{0}^{1} x^{2} \frac{3}{2} (1 - x^{2}) &= \frac{3}{2} \int_{0}^{1} x^{2} - x^{4} \> dx \\
+  E(X^{2}) = \int_{0}^{1} x^{2} \frac{3}{2} (1 - x^{2}) &= \frac{3}{2} \int_{0}^{1} x^{2} - x^{4} \> dx \\
     &= \frac{3}{2} \bigg[ \frac{1}{3} x^{3} - \frac{1}{5} x^{5} \bigg]_{0}^{1} \\
     &= \frac{3}{2} \bigg\{ \frac{1}{3} (1)^{3}- \frac{1}{5} (1)^{5} - \bigg( \frac{1}{3} (0)^{3} - \frac{1}{5} (0)^{5} \bigg) \bigg\} \\
     &= \frac{3}{2} \bigg( \frac{1}{15} \bigg) \\
@@ -561,11 +560,11 @@ $$
 \end{aligned}
 $$
 
-Therefore, $E(X^{2})=1/5$.
+Hence, $E(X^{2})=1/5$.
 
 #### (c)
 
-*Variance of a rv (HB p.9) : **continuous***
+*Variance of a rv (HB p.9) : continuous*
 
 The variance $V(X)$ of a continuous random variable $X$ is defined as
 
@@ -577,16 +576,16 @@ We know that $E(X) = 3/5$, $E(X^{2})=1/5$, so
 
 $$
 V(X) = \frac{1}{5} - \bigg( \frac{3}{8} \bigg)^{2}
-  = \frac{1}{5} - \frac{9}{64} = \frac{19}{320} \simeq 0.059.
+  = \frac{1}{5} - \frac{9}{64} = \frac{19}{320} \simeq 0.0594.
 $$
 
-Therefore, $V(X)=19/320 \simeq 0.059$, rounded to 3dp.
+Therefore, $V(X)=19/320 \simeq 0.0594$, rounded to 3sf.
 
 ### q.34
 
 #### (a)
 
-*Finding the likelihood function of a sample (HB p.13) : **discrete***
+*Finding the likelihood function of a sample (HB p.13) : discrete*
 
 Using the p.m.f. of a geometric distribution, if $p(x_{i}; \theta) = \theta(1-\theta)^{x_{i}-1}$, then the likelihood of $\theta$, $L(\theta)$, will be
 
