--- a/notebooks-py/b-04-zinterval-proportion.ipynb
+++ b/notebooks-py/b-04-zinterval-proportion.ipynb
@@ -5,7 +5,7 @@
    "id": "e61c95ac-ea07-4181-b533-dc1a2c37ddb7",
    "metadata": {},
    "source": [
-    "# Large-sample confidence intervals for a proportion"
+    "# Large sample confidence intervals for a proportion"
    ]
   },
   {
